docs/api/qiskit/0.25/qiskit.opflow.list_ops.ListOp.md
# qiskit.opflow\.list\_ops.ListOp

`ListOp(oplist, combo_fn=<function ListOp.<lambda>>, coeff=1.0, abelian=False, grad_combo_fn=None)`

A Class for manipulating List Operators, and parent class to `SummedOp`, `ComposedOp`, and `TensoredOp`.

List Operators are classes for storing and manipulating lists of Operators, State functions, or Measurements, and include some rule or `combo_fn` defining how the Operator functions of the list constituents should be combined to form to cumulative Operator function of the `ListOp`. For example, a `SummedOp` has an addition-based `combo_fn`, so once the Operators in its list are evaluated against some bitstring to produce a list of results, we know to add up those results to produce the final result of the `SummedOp`’s evaluation. In theory, this `combo_fn` can be any function over classical complex values, but for convenience we’ve chosen for them to be defined over NumPy arrays and values. This way, large numbers of evaluations, such as after calling `to_matrix` on the list constituents, can be efficiently combined. While the combination function is defined over classical values, it should be understood as the operation by which each Operators’ underlying function is combined to form the underlying Operator function of the `ListOp`. In this way, the `ListOps` are the basis for constructing large and sophisticated Operators, State Functions, and Measurements.

The base `ListOp` class is particularly interesting, as its `combo_fn` is “the identity list Operation”. Meaning, if we understand the `combo_fn` as a function from a list of complex values to some output, one such function is returning the list as-is. This is powerful for constructing compact hierarchical Operators which return many measurements in multiple dimensional lists.

**Parameters**

*   **oplist** (`Sequence`\[`OperatorBase`]) – The list of `OperatorBases` defining this Operator’s underlying function.
*   **combo\_fn** (*callable*) – The recombination function to combine classical results of the `oplist` Operators’ eval functions (e.g. sum).
*   **coeff** (`Union`\[`complex`, `ParameterExpression`]) – A coefficient multiplying the operator
*   **abelian** (`bool`) – Indicates whether the Operators in `oplist` are known to mutually commute.
*   **grad\_combo\_fn** (`Optional`\[`Callable`]) – The gradient of recombination function. If None, the gradient will be computed automatically.
*   **that the default "recombination function" lambda above is essentially the** (*Note*) –
*   **- it accepts the list of values** (*identity*) –
*   **returns them in a list.** (*and*) –

`__init__(oplist, combo_fn=<function ListOp.<lambda>>, coeff=1.0, abelian=False, grad_combo_fn=None)`

**Parameters**

*   **oplist** (`Sequence`\[`OperatorBase`]) – The list of `OperatorBases` defining this Operator’s underlying function.
*   **combo\_fn** (*callable*) – The recombination function to combine classical results of the `oplist` Operators’ eval functions (e.g. sum).
*   **coeff** (`Union`\[`complex`, `ParameterExpression`]) – A coefficient multiplying the operator
*   **abelian** (`bool`) – Indicates whether the Operators in `oplist` are known to mutually commute.
*   **grad\_combo\_fn** (`Optional`\[`Callable`]) – The gradient of recombination function. If None, the gradient will be computed automatically.
*   **that the default "recombination function" lambda above is essentially the** (*Note*) –
*   **- it accepts the list of values** (*identity*) –
*   **returns them in a list.** (*and*) –

## Methods

|                                                                                                                                         |                                                                                                                                                                               |
| --------------------------------------------------------------------------------------------------------------------------------------- | ----------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
| [`__init__`](#qiskit.opflow.list_ops.ListOp.__init__ "qiskit.opflow.list_ops.ListOp.__init__")(oplist\[, combo\_fn, coeff, abelian, …]) | **type oplist**`Sequence`\[`OperatorBase`]                                                                                                                                    |
| [`add`](#qiskit.opflow.list_ops.ListOp.add "qiskit.opflow.list_ops.ListOp.add")(other)                                                  | Return Operator addition of self and other, overloaded by `+`.                                                                                                                |
| [`adjoint`](#qiskit.opflow.list_ops.ListOp.adjoint "qiskit.opflow.list_ops.ListOp.adjoint")()                                           | Return a new Operator equal to the Operator’s adjoint (conjugate transpose), overloaded by `~`.                                                                               |
| [`assign_parameters`](#qiskit.opflow.list_ops.ListOp.assign_parameters "qiskit.opflow.list_ops.ListOp.assign_parameters")(param\_dict)  | Binds scalar values to any Terra `Parameters` in the coefficients or primitives of the Operator, or substitutes one `Parameter` for another.                                  |
| [`bind_parameters`](#qiskit.opflow.list_ops.ListOp.bind_parameters "qiskit.opflow.list_ops.ListOp.bind_parameters")(param\_dict)        | Same as assign\_parameters, but maintained for consistency with QuantumCircuit in Terra (which has both assign\_parameters and bind\_parameters).                             |
| [`compose`](#qiskit.opflow.list_ops.ListOp.compose "qiskit.opflow.list_ops.ListOp.compose")(other\[, permutation, front])               | Return Operator Composition between self and other (linear algebra-style: A\@B(x) = A(B(x))), overloaded by `@`.                                                              |
| [`copy`](#qiskit.opflow.list_ops.ListOp.copy "qiskit.opflow.list_ops.ListOp.copy")()                                                    | Return a deep copy of the Operator.                                                                                                                                           |
| [`equals`](#qiskit.opflow.list_ops.ListOp.equals "qiskit.opflow.list_ops.ListOp.equals")(other)                                         | Evaluate Equality between Operators, overloaded by `==`.                                                                                                                      |
| [`eval`](#qiskit.opflow.list_ops.ListOp.eval "qiskit.opflow.list_ops.ListOp.eval")(\[front])                                            | Evaluate the Operator’s underlying function, either on a binary string or another Operator.                                                                                   |
| [`exp_i`](#qiskit.opflow.list_ops.ListOp.exp_i "qiskit.opflow.list_ops.ListOp.exp_i")()                                                 | Return an `OperatorBase` equivalent to an exponentiation of self \* -i, e^(-i\*op).                                                                                           |
| [`log_i`](#qiskit.opflow.list_ops.ListOp.log_i "qiskit.opflow.list_ops.ListOp.log_i")(\[massive])                                       | Return a `MatrixOp` equivalent to log(H)/-i for this operator H.                                                                                                              |
| [`mul`](#qiskit.opflow.list_ops.ListOp.mul "qiskit.opflow.list_ops.ListOp.mul")(scalar)                                                 | Returns the scalar multiplication of the Operator, overloaded by `*`, including support for Terra’s `Parameters`, which can be bound to values later (via `bind_parameters`). |
| [`neg`](#qiskit.opflow.list_ops.ListOp.neg "qiskit.opflow.list_ops.ListOp.neg")()                                                       | Return the Operator’s negation, effectively just multiplying by -1.0, overloaded by `-`.                                                                                      |
| [`permute`](#qiskit.opflow.list_ops.ListOp.permute "qiskit.opflow.list_ops.ListOp.permute")(permutation)                                | Permute the qubits of the operator.                                                                                                                                           |
| [`power`](#qiskit.opflow.list_ops.ListOp.power "qiskit.opflow.list_ops.ListOp.power")(exponent)                                         | Return Operator composed with self multiple times, overloaded by `**`.                                                                                                        |
| [`primitive_strings`](#qiskit.opflow.list_ops.ListOp.primitive_strings "qiskit.opflow.list_ops.ListOp.primitive_strings")()             | Return a set of strings describing the primitives contained in the Operator.                                                                                                  |
| [`reduce`](#qiskit.opflow.list_ops.ListOp.reduce "qiskit.opflow.list_ops.ListOp.reduce")()                                              | Try collapsing the Operator structure, usually after some type of conversion, e.g.                                                                                            |
| [`tensor`](#qiskit.opflow.list_ops.ListOp.tensor "qiskit.opflow.list_ops.ListOp.tensor")(other)                                         | Return tensor product between self and other, overloaded by `^`.                                                                                                              |
| [`tensorpower`](#qiskit.opflow.list_ops.ListOp.tensorpower "qiskit.opflow.list_ops.ListOp.tensorpower")(other)                          | Return tensor product with self multiple times, overloaded by `^`.                                                                                                            |
| [`to_circuit_op`](#qiskit.opflow.list_ops.ListOp.to_circuit_op "qiskit.opflow.list_ops.ListOp.to_circuit_op")()                         | Returns an equivalent Operator composed of only QuantumCircuit-based primitives, such as `CircuitOp` and `CircuitStateFn`.                                                    |
| [`to_matrix`](#qiskit.opflow.list_ops.ListOp.to_matrix "qiskit.opflow.list_ops.ListOp.to_matrix")(\[massive])                           | Return NumPy representation of the Operator.                                                                                                                                  |
| [`to_matrix_op`](#qiskit.opflow.list_ops.ListOp.to_matrix_op "qiskit.opflow.list_ops.ListOp.to_matrix_op")(\[massive])                  | Returns an equivalent Operator composed of only NumPy-based primitives, such as `MatrixOp` and `VectorStateFn`.                                                               |
| [`to_pauli_op`](#qiskit.opflow.list_ops.ListOp.to_pauli_op "qiskit.opflow.list_ops.ListOp.to_pauli_op")(\[massive])                     | Returns an equivalent Operator composed of only Pauli-based primitives, such as `PauliOp`.                                                                                    |
| [`to_spmatrix`](#qiskit.opflow.list_ops.ListOp.to_spmatrix "qiskit.opflow.list_ops.ListOp.to_spmatrix")()                               | Returns SciPy sparse matrix representation of the Operator.                                                                                                                   |
| [`traverse`](#qiskit.opflow.list_ops.ListOp.traverse "qiskit.opflow.list_ops.ListOp.traverse")(convert\_fn\[, coeff])                   | Apply the convert\_fn to each node in the oplist.                                                                                                                             |

## Attributes

|                                                                                                               |                                                                                                                            |
| ------------------------------------------------------------------------------------------------------------- | -------------------------------------------------------------------------------------------------------------------------- |
| `INDENTATION`                                                                                                 |                                                                                                                            |
| [`abelian`](#qiskit.opflow.list_ops.ListOp.abelian "qiskit.opflow.list_ops.ListOp.abelian")                   | Whether the Operators in `oplist` are known to commute with one another.                                                   |
| [`coeff`](#qiskit.opflow.list_ops.ListOp.coeff "qiskit.opflow.list_ops.ListOp.coeff")                         | The scalar coefficient multiplying the Operator.                                                                           |
| [`combo_fn`](#qiskit.opflow.list_ops.ListOp.combo_fn "qiskit.opflow.list_ops.ListOp.combo_fn")                | The function defining how to combine `oplist` (or Numbers, or NumPy arrays) to produce the Operator’s underlying function. |
| [`distributive`](#qiskit.opflow.list_ops.ListOp.distributive "qiskit.opflow.list_ops.ListOp.distributive")    | Indicates whether the ListOp or subclass is distributive under composition.                                                |
| [`grad_combo_fn`](#qiskit.opflow.list_ops.ListOp.grad_combo_fn "qiskit.opflow.list_ops.ListOp.grad_combo_fn") | The gradient of `combo_fn`.                                                                                                |
| [`instance_id`](#qiskit.opflow.list_ops.ListOp.instance_id "qiskit.opflow.list_ops.ListOp.instance_id")       | Return the unique instance id.                                                                                             |
| [`num_qubits`](#qiskit.opflow.list_ops.ListOp.num_qubits "qiskit.opflow.list_ops.ListOp.num_qubits")          | The number of qubits over which the Operator is defined.                                                                   |
| [`oplist`](#qiskit.opflow.list_ops.ListOp.oplist "qiskit.opflow.list_ops.ListOp.oplist")                      | The list of `OperatorBases` defining the underlying function of this Operator.                                             |
| [`parameters`](#qiskit.opflow.list_ops.ListOp.parameters "qiskit.opflow.list_ops.ListOp.parameters")          | Return a set of Parameter objects contained in the Operator.                                                               |

`property abelian`

Whether the Operators in `oplist` are known to commute with one another.

**Return type**

`bool`

**Returns**

A bool indicating whether the `oplist` is Abelian.

`add(other)`

Return Operator addition of self and other, overloaded by `+`.

**Parameters**

**other** (`OperatorBase`) – An `OperatorBase` with the same number of qubits as self, and in the same ‘Operator’, ‘State function’, or ‘Measurement’ category as self (i.e. the same type of underlying function).

**Return type**

`ListOp`

**Returns**

An `OperatorBase` equivalent to the sum of self and other.

`adjoint()`

Return a new Operator equal to the Operator’s adjoint (conjugate transpose), overloaded by `~`. For StateFns, this also turns the StateFn into a measurement.

**Return type**

`ListOp`

**Returns**

An `OperatorBase` equivalent to the adjoint of self.

`assign_parameters(param_dict)`

Binds scalar values to any Terra `Parameters` in the coefficients or primitives of the Operator, or substitutes one `Parameter` for another. This method differs from Terra’s `assign_parameters` in that it also supports lists of values to assign for a give `Parameter`, in which case self will be copied for each parameterization in the binding list(s), and all the copies will be returned in an `OpList`. If lists of parameterizations are used, every `Parameter` in the param\_dict must have the same length list of parameterizations.

**Parameters**

**param\_dict** (`dict`) – The dictionary of `Parameters` to replace, and values or lists of values by which to replace them.

**Return type**

`OperatorBase`

**Returns**

The `OperatorBase` with the `Parameters` in self replaced by the values or `Parameters` in param\_dict. If param\_dict contains parameterization lists, this `OperatorBase` is an `OpList`.

`bind_parameters(param_dict)`

Same as assign\_parameters, but maintained for consistency with QuantumCircuit in Terra (which has both assign\_parameters and bind\_parameters).

**Return type**

`OperatorBase`

`property coeff`

The scalar coefficient multiplying the Operator.

**Return type**

`Union`\[`complex`, `ParameterExpression`]

**Returns**

The coefficient.

`property combo_fn`

The function defining how to combine `oplist` (or Numbers, or NumPy arrays) to produce the Operator’s underlying function. For example, SummedOp’s combination function is to add all of the Operators in `oplist`.

**Return type**

`Callable`

**Returns**

The combination function.

`compose(other, permutation=None, front=False)`

Return Operator Composition between self and other (linear algebra-style: A\@B(x) = A(B(x))), overloaded by `@`.

Note: You must be conscious of Quantum Circuit vs. Linear Algebra ordering conventions. Meaning, X.compose(Y) produces an X∘Y on qubit 0, but would produce a QuantumCircuit which looks like

> -\[Y]-\[X]-

Because Terra prints circuits with the initial state at the left side of the circuit.

**Parameters**

*   **other** (`OperatorBase`) – The `OperatorBase` with which to compose self.
*   **permutation** (`Optional`\[`List`\[`int`]]) – `List[int]` which defines permutation on other operator.
*   **front** (`bool`) – If front==True, return `other.compose(self)`.

**Return type**

`OperatorBase`

**Returns**

An `OperatorBase` equivalent to the function composition of self and other.

`copy()`

Return a deep copy of the Operator.

**Return type**

`OperatorBase`

`property distributive`

Indicates whether the ListOp or subclass is distributive under composition. ListOp and SummedOp are, meaning that (opv @ op) = (opv\[0] @ op + opv\[1] @ op) (using plus for SummedOp, list for ListOp, etc.), while ComposedOp and TensoredOp do not behave this way.

**Return type**

`bool`

**Returns**

A bool indicating whether the ListOp is distributive under composition.

`equals(other)`

Evaluate Equality between Operators, overloaded by `==`. Only returns True if self and other are of the same representation (e.g. a DictStateFn and CircuitStateFn will never be equal, even if their vector representations are equal), their underlying primitives are equal (this means for ListOps, OperatorStateFns, or EvolvedOps the equality is evaluated recursively downwards), and their coefficients are equal.

**Parameters**

**other** (`OperatorBase`) – The `OperatorBase` to compare to self.

**Return type**

`bool`

**Returns**

A bool equal to the equality of self and other.

`eval(front=None)`

Evaluate the Operator’s underlying function, either on a binary string or another Operator. A square binary Operator can be defined as a function taking a binary function to another binary function. This method returns the value of that function for a given StateFn or binary string. For example, `op.eval('0110').eval('1110')` can be seen as querying the Operator’s matrix representation by row 6 and column 14, and will return the complex value at those “indices.” Similarly for a StateFn, `op.eval('1011')` will return the complex value at row 11 of the vector representation of the StateFn, as all StateFns are defined to be evaluated from Zero implicitly (i.e. it is as if `.eval('0000')` is already called implicitly to always “indexing” from column 0).

ListOp’s eval recursively evaluates each Operator in `oplist`, and combines the results using the recombination function `combo_fn`.

**Parameters**

**front** (`Union`\[`str`, `Dict`\[`str`, `complex`], `ndarray`, `OperatorBase`, `Statevector`, `None`]) – The bitstring, dict of bitstrings (with values being coefficients), or StateFn to evaluated by the Operator’s underlying function.

**Return type**

`Union`\[`OperatorBase`, `complex`]

**Returns**

The output of the `oplist` Operators’ evaluation function, combined with the `combo_fn`. If either self or front contain proper `ListOps` (not ListOp subclasses), the result is an n-dimensional list of complex or StateFn results, resulting from the recursive evaluation by each OperatorBase in the ListOps.

**Raises**

*   **NotImplementedError** – Raised if called for a subclass which is not distributive.
*   **TypeError** – Operators with mixed hierarchies, such as a ListOp containing both PrimitiveOps and ListOps, are not supported.
*   **NotImplementedError** – Attempting to call ListOp’s eval from a non-distributive subclass.

`exp_i()`

Return an `OperatorBase` equivalent to an exponentiation of self \* -i, e^(-i\*op).

**Return type**

`OperatorBase`

`property grad_combo_fn`

The gradient of `combo_fn`.

**Return type**

`Optional`\[`Callable`]

`property instance_id`

Return the unique instance id.

**Return type**

`int`

`log_i(massive=False)`

Return a `MatrixOp` equivalent to log(H)/-i for this operator H. This function is the effective inverse of exp\_i, equivalent to finding the Hermitian Operator which produces self when exponentiated. For proper ListOps, applies `log_i` to all ops in oplist.

**Return type**

`OperatorBase`

`mul(scalar)`

Returns the scalar multiplication of the Operator, overloaded by `*`, including support for Terra’s `Parameters`, which can be bound to values later (via `bind_parameters`).

**Parameters**

**scalar** (`Union`\[`complex`, `ParameterExpression`]) – The real or complex scalar by which to multiply the Operator, or the `ParameterExpression` to serve as a placeholder for a scalar factor.

**Return type**

`ListOp`

**Returns**

An `OperatorBase` equivalent to product of self and scalar.

`neg()`

Return the Operator’s negation, effectively just multiplying by -1.0, overloaded by `-`.

**Return type**

`OperatorBase`

**Returns**

An `OperatorBase` equivalent to the negation of self.

`property num_qubits`

The number of qubits over which the Operator is defined. If `op.num_qubits == 5`, then `op.eval('1' * 5)` will be valid, but `op.eval('11')` will not.

**Return type**

`int`

**Returns**

The number of qubits accepted by the Operator’s underlying function.

`property oplist`

The list of `OperatorBases` defining the underlying function of this Operator.

**Return type**

`List`\[`OperatorBase`]

**Returns**

The Operators defining the ListOp

`property parameters`

Return a set of Parameter objects contained in the Operator.

`permute(permutation)`

Permute the qubits of the operator.

**Parameters**

**permutation** (`List`\[`int`]) – A list defining where each qubit should be permuted. The qubit at index j should be permuted to position permutation\[j].

**Return type**

`OperatorBase`

**Returns**

A new ListOp representing the permuted operator.

**Raises**

[**OpflowError**](qiskit.opflow.OpflowError#qiskit.opflow.OpflowError "qiskit.opflow.OpflowError") – if indices do not define a new index for each qubit.

`power(exponent)`

Return Operator composed with self multiple times, overloaded by `**`.

**Parameters**

**exponent** (`int`) – The int number of times to compose self with itself.

**Return type**

`OperatorBase`

**Returns**

An `OperatorBase` equivalent to self composed with itself exponent times.

`primitive_strings()`

Return a set of strings describing the primitives contained in the Operator. For example, `{'QuantumCircuit', 'Pauli'}`. For hierarchical Operators, such as `ListOps`, this can help illuminate the primitives represented in the various recursive levels, and therefore which conversions can be applied.

**Return type**

`Set`\[`str`]

**Returns**

A set of strings describing the primitives contained within the Operator.

`reduce()`

Try collapsing the Operator structure, usually after some type of conversion, e.g. trying to add Operators in a SummedOp or delete needless IGates in a CircuitOp. If no reduction is available, just returns self.

**Return type**

`OperatorBase`

**Returns**

The reduced `OperatorBase`.

`tensor(other)`

Return tensor product between self and other, overloaded by `^`. Note: You must be conscious of Qiskit’s big-endian bit printing convention. Meaning, X.tensor(Y) produces an X on qubit 0 and an Y on qubit 1, or X⨂Y, but would produce a QuantumCircuit which looks like

> -\[Y]- -\[X]-

Because Terra prints circuits and results with qubit 0 at the end of the string or circuit.

**Parameters**

**other** (`OperatorBase`) – The `OperatorBase` to tensor product with self.

**Return type**

`OperatorBase`

**Returns**

An `OperatorBase` equivalent to the tensor product of self and other.

`tensorpower(other)`

Return tensor product with self multiple times, overloaded by `^`.

**Parameters**

**other** (`int`) – The int number of times to tensor product self with itself via `tensorpower`.

**Return type**

`Union`\[`OperatorBase`, `int`]

**Returns**

An `OperatorBase` equivalent to the tensorpower of self by other.

`to_circuit_op()`

Returns an equivalent Operator composed of only QuantumCircuit-based primitives, such as `CircuitOp` and `CircuitStateFn`.

**Return type**

`OperatorBase`

`to_matrix(massive=False)`

Return NumPy representation of the Operator. Represents the evaluation of the Operator’s underlying function on every combination of basis binary strings. Warn if more than 16 qubits to force having to set `massive=True` if such a large vector is desired.

**Return type**

`ndarray`

**Returns**

The NumPy `ndarray` equivalent to this Operator.

`to_matrix_op(massive=False)`

Returns an equivalent Operator composed of only NumPy-based primitives, such as `MatrixOp` and `VectorStateFn`.

**Return type**

`ListOp`

`to_pauli_op(massive=False)`

Returns an equivalent Operator composed of only Pauli-based primitives, such as `PauliOp`.

**Return type**

`ListOp`

`to_spmatrix()`

Returns SciPy sparse matrix representation of the Operator.

**Return type**

`Union`\[`spmatrix`, `List`\[`spmatrix`]]

**Returns**

CSR sparse matrix representation of the Operator, or List thereof.

`traverse(convert_fn, coeff=None)`

Apply the convert\_fn to each node in the oplist.

**Parameters**

*   **convert\_fn** (`Callable`) – The function to apply to the internal OperatorBase.
*   **coeff** (`Union`\[`complex`, `ParameterExpression`, `None`]) – A coefficient to multiply by after applying convert\_fn. If it is None, self.coeff is used instead.

**Return type**

`ListOp`

**Returns**

The converted ListOp.
